Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
None
-
None
-
Mesos Foundations RI12 Sp 43, Mesos Foundations: RI-13 Sp 44
-
5
Description
The master should be updated to avoid crashing when a framework re-registers with a different principal.
Attachments
Issue Links
- is related to
-
MESOS-703 master fails to respect updated FrameworkInfo when the framework scheduler restarts
- Accepted
-
MESOS-9681 Update framework principal on re-registration
- Open